# stllr-mcp

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
.jjconflict-base-0/: README.md
.jjconflict-base-0/src/stellarbridge_mcp/: __main__.py
.jjconflict-base-0/tests/: __init__.py  test_audit.py  test_mcp_stdio_helpers.py
.jjconflict-base-0/tests/integration/: deterministic_react_chat_model.py
.jjconflict-base-0/tests/integration_live/: __init__.py  live_tool_registry.py
.jjconflict-side-0/: pyproject.toml
.jjconflict-side-0/src/stellarbridge_mcp/tools/: requests.py
.jjconflict-side-0/tests/: test_client.py
.jjconflict-side-0/tests/integration/: mcp_stdio_helpers.py  mcp_tool_cases.py
.jjconflict-side-0/tests/integration_live/: live_tool_registry.py
.jjconflict-side-1/: .gitignore
.jjconflict-side-1/src/stellarbridge_mcp/: multipart_s3_upload.py
.jjconflict-side-1/src/stellarbridge_mcp/tools/: __init__.py  audit.py  transfers.py
.jjconflict-side-1/tests/: test_live_tool_registry_coverage.py  test_requests.py  test_server.py
.jjconflict-side-1/tests/integration_live/: conftest.py  live_tool_registry.py
agent_layer_test/: __init__.py  cli.py  mcp_surface.py  models.py  planner_prompt.py  reporting.py  suite.json
agent_layer_test/runners/: __init__.py  opencode_runner.py
src/stellarbridge_mcp/: __init__.py  client.py  config.py  multipart_s3_upload.py  server.py
src/stellarbridge_mcp/tools/: audit.py  drive.py  projects.py  requests.py  transfers.py
tests/: README.md  conftest.py  test_client.py  test_config.py  test_drive.py  test_live_tool_registry_coverage.py  test_mcp_stdio_helpers.py  test_multipart_s3_upload.py  test_projects.py  test_transfers.py
tests/integration/: conftest.py  mcp_stdio_helpers.py  mcp_tool_cases.py  test_mcp_langgraph_agent.py  test_mcp_stdio_all_tools.py  test_mcp_stdio_multipart_upload.py  test_mcp_stdio_retest_blocked_tools.py  test_mcp_stdio_upload_drive_file_from_path.py
tests/integration_live/: conftest.py  dump_mcp_response_samples.py  live_drive_create_upload_move_flow.py  live_drive_create_upload_rename_flow.py  live_tool_registry.py  print_first_transfer_id.py  run_mcp_live_full_workflow.py  run_mcp_live_retest_blocked_tools.py  test_mcp_stdio_live_all_tools.py  test_mcp_stdio_live_smoke.py
