[project]
name = "stellarbridge-mcp"
version = "0.1.1"
description = "MCP server for Stellarbridge API - file drive, sharing, and transfer operations"
requires-python = ">=3.13"
dependencies = [
  "fastmcp>=2.0",
  "httpx>=0.27",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
]

[project.scripts]
stellarbridge-mcp = "stellarbridge_mcp.server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stellarbridge_mcp"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-httpx>=0.30",
  "ruff",
  "mypy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
strict = true
python_version = "3.13"
