[project]
name = "stellarbridge-mcp"
version = "0.1.1"
description = "MCP server for Stellarbridge API - file drive, sharing, and transfer operations"
requires-python = ">=3.13"
dependencies = [
  "fastmcp>=2.0",
  "httpx>=0.27",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
]

[project.scripts]
stellarbridge-mcp = "stellarbridge_mcp.server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stellarbridge_mcp"]

[dependency-groups]
dev = [
  "python-dotenv>=1.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-httpx>=0.30",
  "ruff",
  "mypy",
  "mcp>=1.26.0",
  "pytest-httpserver>=1.1.5",
  "langchain-mcp-adapters>=0.2.2",
  "langgraph>=1.1.3",
  "langchain-core>=1.2.23",
  "langchain>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: spawn MCP stdio subprocess and/or mock HTTP API (slower than unit tests)",
  "live_api: real Stellarbridge API (requires STELLARBRIDGE_LIVE_API=1 and credentials; see tests/integration_live/)",
]
# Mock integration tests set STELLARBRIDGE_* via tests/integration/conftest.py. Live tests are opt-in
# (tests/integration_live/); do not rely on a real API for default CI runs.
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
strict = true
python_version = "3.13"
